--- a/static_finance/css/signup.css
+++ b/static_finance/css/signup.css
@@ -41,7 +41,9 @@ h2 {
     color: #333;
 }
 
-.form-group input {
+.form-group input[type="text"],
+.form-group input[type="email"],
+.form-group input[type="password"]{
     width: 100%;
     padding: 10px;
     border: 1px solid #ccc;
@@ -50,7 +52,9 @@ h2 {
     background-color: #f9f9f9;
 }
 
-.form-group input:focus {
+.form-group input[type="text"]:focus,
+.form-group input[type="email"]:focus,
+.form-group input[type="password"]:focus {
     outline: none;
     border-color: #007bff;
 }
